# gproj

./: .gitignore  CMakeLists.txt  Makefile  README  imgui.ini  outmeout
cmake/modules/: FindGLFW3.cmake  FindPackageHandleStandardArgs.cmake  FindVulkan.cmake
data/materials/: asphalt.mtl  spaceBlanket.mtl  vp.mtl
data/objects/: _SOURCE.txt
data/shaders/: FXAA.glsl  ambient_occlusion.frag  blur_x.comp  blur_y.comp  compile.bat  fromBuffer_transform.vert  fromBuffer_transform_vert.spv  fsq.frag  fsq_frag.spv  fsq_vert.spv  fxaa.frag  fxaa_nvidia.frag  gbuffer_filler.frag  global_lighting.frag  lighting.frag  lighting.glsl  local_lighting.frag  logo_display.frag  object_pass.vert  shadow_map.frag  shadow_map.vert  triangle.frag
data/shaders/inc/: defines.glsl  lighting.glsl
data/shaders/spv/: ambient_occlusion_frag.spv  blur_x_comp.spv  blur_y_comp.spv  fxaa_frag.spv  fxaa_nvidia_frag.spv  gbuffer_filler_frag.spv  global_lighting_frag.spv  lighting_frag.spv  local_lighting_frag.spv  logo_display_frag.spv  object_pass_vert.spv  shadow_map_frag.spv  shadow_map_vert.spv
dep/inc/: imgui_impl_glfw.h
dep/inc/glm/: CMakeLists.txt
dep/src/: imgui_impl_vulkan.cpp  tiny_obj_loader.cc  tinytiffreader.cpp
dep/win/Debug/: glfw3.lib
dep/win/RelWithDebInfo/: glfw3.lib
dep/win/Release/: glfw3.lib
inc/: Abstractions.h  Allocator.h  Application.h  Buffer.h  Camera.h  CommandBuffer.h  Framebuffer.h  GLFW.h  GLFWWindow.h  GraphicsPipeline.h  Image.h  Input.h  InputHandler.h  InputHandler_GLFW.h  Light.h  LogicalDevice.h  Material.h  Mesh.h  MeshManager.h  MyMath.h  Object.h  PhysicalDevice.h  PipelineLayout.h  Queue.h  RenderAPI.h  RenderAPIType.h  RenderEngine.h  RenderPass.h  RenderSteps.h  Renderer.h  Scene.h  Shader.h  Shader.inl  Swapchain.h  Texture.h  Trace.h  TraceVK.inl  Utils.h  Vertex.h  VulkanControl.h  (+2 more)
inc/GL/: gl3w.h  glcorearb.h
inc/app/: Application.h  ImGui.h  InputHandler.h  Scene.h
inc/render/: CommandBuffer.h  GLFWControl.h  GLFWWindow.h  Image.h  ImageLoader.h  ImageManager.h  MemoryAllocator.h  Mesh.h  MeshManager.h  PhysicalDevice.h  Queue.h  Renderer.h  Shader.h  Shader.inl  Surface.h  Swapchain.h  Texture.h  Vertex.h  Vulkan.h
inc/util/: MyMath.h  Trace.h  TraceVK.inl  Utils.h
shaders/: compile.bat  fromBuffer_transform.vert  fromBuffer_transform_vert.spv  fsq.frag  fsq.vert  fsq_frag.spv  fsq_vert.spv  triangle.frag  triangle_frag.spv
src/: Application.cpp  Buffer.cpp  Camera.cpp  CommandBuffer.cpp  Framebuffer.cpp  GLFW.cpp  GLFWControl.cpp  GLFWWindow.cpp  GraphicsPipeline.cpp  GraphicsPipelineCreator.cpp  Image.cpp  ImageLoader.cpp  InputHandler.cpp  InputHandler_GLFW.cpp  Light.cpp  LogicalDevice.cpp  Main.cpp  Material.cpp  MemoryAllocator.cpp  Mesh.cpp  MeshManager.cpp  Object.cpp  PhysicalDevice.cpp  Queue.cpp  RenderAPI.cpp  RenderAPIType.h  RenderEngine.cpp  RenderEngine.h  RenderPass.cpp  RenderSteps.cpp  Render_AmbientStep.cpp  Render_BlurStep.cpp  Render_GeometryStep.cpp  Render_GlobalLighting.cpp  Render_LocalLightingStep.cpp  Render_PostProcessStep.cpp  Render_ShadowMapStep.cpp  Render_SplashScreenStep.cpp  Renderer.cpp  Scene.cpp  (+12 more)
src/app/: Application.cpp  InputHandler.cpp  Scene.cpp
src/render/: Buffer.cpp  CommandBuffer.cpp  Framebuffer.cpp  GLFWControl.cpp  GLFWWindow.cpp  GraphicsPipeline.cpp  GraphicsPipelineCreator.cpp  Image.cpp  LogicalDevice.cpp  MemoryAllocator.cpp  Mesh.cpp  MeshManager.cpp  PhysicalDevice.cpp  Queue.cpp  RenderPass.cpp  RenderSteps.cpp  Renderer.cpp  Shader.cpp  Surface.cpp  Swapchain.cpp  Texture.cpp  Vertex.cpp  VulkanControl.cpp
src/render/steps/: Render_AmbientStep.cpp  Render_BlurStep.cpp  Render_GeometryStep.cpp  Render_GlobalLighting.cpp  Render_LocalLightingStep.cpp  Render_PostProcessStep.cpp  Render_ShadowMapStep.cpp  Render_SplashScreenStep.cpp
src/util/: Trace.cpp
